--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-streamlit==1.24.0
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
-scipy==1.10.1
-plotly==5.15.0
-streamlit-lottie==0.0.5
-requests==2.31.0
-streamlit-option-menu==0.3.6
-altair==5.0.1
-streamlit-card==0.0.5
-streamlit-extras==0.3.0
-pillow==9.5.0
+streamlit
+pandas
+numpy
+scikit-learn
+scipy
+plotly
+streamlit-lottie
+requests
+streamlit-option-menu
+altair
+streamlit-card
+streamlit-extras
+pillow
 
